// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test array is valid, but one item is not 1`] = `
Object {
  "errorMessage": "Should be at least 5 characters.",
  "errorPath": Array [
    0,
  ],
  "isValid": false,
  "items": Array [
    Object {
      "errorMessage": "Should be at least 5 characters.",
      "errorPath": Array [],
      "isValid": false,
    },
    Object {
      "errorMessage": "",
      "errorPath": Array [],
      "isValid": true,
    },
    Object {
      "errorMessage": "",
      "errorPath": Array [],
      "isValid": true,
    },
  ],
}
`;

exports[`Test simple array 1`] = `
Object {
  "errorMessage": "Should have at least 3 items.",
  "errorPath": Array [],
  "isValid": false,
  "items": Array [
    Object {
      "errorMessage": "",
      "errorPath": Array [],
      "isValid": true,
    },
    Object {
      "errorMessage": "",
      "errorPath": Array [],
      "isValid": true,
    },
  ],
}
`;

exports[`Test simple array values 1`] = `
Object {
  "errorMessage": "Should have at least 3 items.",
  "errorPath": Array [],
  "isValid": false,
  "items": Array [
    Object {
      "errorMessage": "Should be at least 5 characters.",
      "errorPath": Array [],
      "isValid": false,
    },
    Object {
      "errorMessage": "",
      "errorPath": Array [],
      "isValid": true,
    },
  ],
}
`;
